--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
         <div class="calc-container">
             <p id="display">Calculator</p>
             <div class="row1">
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
-                <button id="/">/</button>
+                <button class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
+                <button class="operator" id="/">/</button>
             </div>
             <div class="row2">
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>
-                <button id="*">x</button>
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
+                <button class="operator" id="*">x</button>
             </div>
             <div class="row3">
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
-                <button id="-">-</button>
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
+                <button class="operator" id="-">-</button>
             </div>
             <div class="row4">
-                <button id="0">0</button>
-                <button id="=">=</button>
-                <button id="+">+</button>
+                <button class="number" id="0">0</button>
+                <button class="clear" id="clear">Clear</button>
+                <button class="enter" id="=">=</button>
+                <button class="operator" id="+">+</button>
             </div>
         </div>
         <script src="calculator.js"></script>
